# Machine-learning2

./: .gitignore  README.md  Test.py  index.html  main.py  pyproject.toml  rock_data.json  script.js  store.json  style.css  test_streamlit.py
bootstrap-5.2.3-dist/css/: pop-up.css
bootstrap-5.2.3-dist/font/: Gradient-Text.txt
bootstrap-5.2.3-dist/html/: Carousel.txt  background-full.txt
bootstrap-5.2.3-dist/js/: script-wow.js
rock_resnet/: fingerprint.pb
rock_resnet/variables/: variables.index
static/: script.js  style.css
static/bootstrap-5.2.3-dist/font/: font-link.txt
static/bootstrap-5.2.3-dist/html/: Dorpdown.txt  Gallery.txt  button.txt
