[project]
name = "machine-learning2"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "B_K", email = "60977054+l3oatkunGG@users.noreply.github.com" }
]
dependencies = ["flask~=2.3.1", "tensorflow-macos~=2.12.0", "streamlit~=1.22.0"]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
